--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             padding-left: 40px; /* Increased left padding to accommodate the flag */
         }
         .input-group select.lang-eng { background-color: #007bff; background-image: url('https://twemoji.maxcdn.com/v/13.1.0/72x72/1f1ec-1f1e7.png'); }
-        .input-group select.lang-rus { background-color: #ff4d4d; background-image: url('https://twemoji.maxcdn.com/v/13.1.0/72x72/1f1f7-1f1fa.png'); }
+        .input-group select.lang-rus { background-color: #ff4d4d; background-image: url('https://twemoji.maxcdn.com/v/13.1.0/72x72/1f1f0-1f1ff.png'); }
         .input-group select.lang-ben { background-color: #f9a825; background-image: url('https://twemoji.maxcdn.com/v/13.1.0/72x72/1f1e7-1f1e9.png'); }
         .input-group select.lang-aze { background-color: #40c4ff; background-image: url('https://twemoji.maxcdn.com/v/13.1.0/72x72/1f1e6-1f1ff.png'); }
         .input-group select.lang-por { background-color: #ffab40; background-image: url('https://twemoji.maxcdn.com/v/13.1.0/72x72/1f1e7-1f1f7.png'); }
